# External-BCC-for-GPUs

Compact-BCC/: README.md
Compact-BCC/include/cuda_bcc/: bcc.cuh  lca.cuh
Compact-BCC/include/extern_bcc/: bcg_memory_utils.cuh  edge_cleanup.cuh
Compact-BCC/include/multicore_bfs/: multicore_bfs.hpp
Compact-BCC/insights/: GAP-twitter.txt  webbase-2001.txt
Compact-BCC/src/: main.cu
Compact-BCC/src/cuda_bcc/: bfs.cu  checker_v1.cpp  cuda_csr.cu  cut_vertex.cu
Compact-BCC/src/extern_bcc/: edge_cleanup.cu  extern_bcc.cu  repair.cu
Compact-BCC/src/graph/: graph.cu
Compact-BCC/tools/src/: edge_list_to_ecl.cpp  snap_graph_parser.cpp  snap_to_txt.cpp
FAST-BCC-GPU/: CMakeLists.txt  TODO.lua
FAST-BCC-GPU/datasets/: fake_test.txt
FAST-BCC-GPU/include/extern_bcc/: edge_cleanup.cuh  extern_bcc.cuh  spanning_tree.cuh
FAST-BCC-GPU/include/fast_bcc/: fast_bcc.cuh  repair.cuh
FAST-BCC-GPU/src/: main.cu
FAST-BCC-GPU/src/extern_bcc/: edge_cleanup.cu  spanning_tree.cu
FAST-BCC-GPU/src/fast_bcc/: connected_components.cu  fast_bcc.cu  list_ranking.cu  repair.cu  spanning_tree.cu  sparse_table_max.cu  sparse_table_min.cu
FAST-BCC-GPU/src/graph/: graph.cu
FAST-BCC-GPU/testcases/: random_graph.txt  smallworld.txt
FAST-BCC-GPU/tools/: mtxToEdgelist.cpp  new_temp.cpp  runner.sh  temp.cpp  txt_graph_parser.cpp  uk-union-2006-06-2007-05-underlying_result.txt  web_graph.edge  webgraph_parser.cpp
Fast-BCC/datasets/: edge_mirror  fake_cut.txt  graph_100.txt  graph_101.txt  graph_101_serial_result.txt
Fast-BCC/include/extern_bcc/: bcg_memory_utils.cuh  extern_bcc.cuh
Fast-BCC/include/fast_bcc/: connected_components.cuh  euler.cuh  list_ranking.cuh
Fast-BCC/include/utility/: cuda_utility.cuh  timer.hpp
Fast-BCC/src/: main.cu
Fast-BCC/src/extern_bcc/: bcg_memory_utils.cu  extern_bcc.cu  spanning_tree.cu
Fast-BCC/src/fast_bcc/: connected_components.cu  euler.cu  fast_bcc.cu  repair.cu  spanning_tree.cu
Fast-BCC/src/utility/: cuda_utility.cu
Fast-BCC/testcases/: graph.txt  input_130.txt  myforestfiregraph.txt  smallworld_1.txt
Fast-BCC/tools/: edge_graph_cc.cpp  edge_graph_parser.cpp  edgelist_to_bin.cpp  new_runner.sh  overlapping.cu  script.sh  test.mtx
GEM-BCC/: CMakeLists.txt
GEM-BCC/include/cuda_bcc/: bfs.cuh  connected_components.cuh  cuda_csr.cuh  cut_vertex.cuh
GEM-BCC/include/extern_bcc/: bcg.cuh  extern_bcc.cuh  repair.cuh
GEM-BCC/include/graph/: graph.cuh
GEM-BCC/include/utility/: cuda_utility.cuh  export_output.cuh
GEM-BCC/insights/: GAP-web.txt  friendster.txt  it-2004.txt  sk-2005.txt  twitter7.txt
GEM-BCC/src/cuda_bcc/: bcc.cu  connected_components.cu  implicit_bcc_validator.cpp  lca.cu
GEM-BCC/src/extern_bcc/: bcg.cu  bcg_memory_utils.cu
GEM-BCC/src/multicore_bfs/: multicore_bfs.cpp
GEM-BCC/src/utility/: cuda_utility.cu
GEM-BCC/tools/: Makefile  ecl_runner.sh  print_progress.cpp  tree_generate.py
GEM-BCC/tools/SNAP/: snap_graph_parser.cpp
GEM-BCC/tools/SNAP/snap/: README.md
GEM-BCC/tools/graphIO/: Makefile  bin_creator.sh  edge_adder.sh  master.sh  test_1.txt
GEM-BCC/tools/graphIO/src/: edge_list_to_bin.cpp  edge_list_validator.cpp
GEM-BCC/tools/src/: ECLgraph.h
